--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         .footer-link:hover{
             transition: 0.5s;
-            color: black!important;
+            color: yellow!important;
         }
     </style>
 </head>
