--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         .footer-link{
             text-decoration: none;
-            color: black!important;
+            color: yellow!important;
             font-size: 20px;
         }
         .footer-link:hover{
